Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -1,7 +1,8 @@
+<p>My favorite dog names: </p>
 <ul>
 <li>Gump</li>
-<li>Gump</li>
-<li>Gump</li>
-<li>Gump</li>
-<li>Gump</li>
+<li>Gus</li>
+<li>Ladybird</li>
+<li>Moose</li>
+<li>Homer</li>
 </ul>
